assets/style/main.css
:root {
    --background-lilla: linear-gradient(87.03deg, #756AF6 16.38%, #CC7DDA 62.94%, #F6BE85 97.64%);
    --background-dark: #1e2137;
    --background-dark-blue: #181a29;
    --background-cool-dark: #191c1f;
    --background-cool: linear-gradient(161deg, rgba(255, 49, 140, .5), rgba(255, 49, 140, 0)), #5233cc;
    --background-pink: linear-gradient(45deg, #a855f7 14.21%, #ec4899 83.82%);
    --background-sky: linear-gradient(45deg, #07B5D5 14.21%, #3984F5 83.82%);
    --background-purple: linear-gradient(45deg, #d946ef 14.21%, #8b5cf6 83.82%);
    --background-indigo: linear-gradient(45deg, #6366f1 14.21%, #0ea5e9 83.82%);
    --background-blue: linear-gradient(137.13deg, #030023 -2.05%, #1560d1 81.78%);
    --light-color: #64748b;
    --purple-color: #6B57FF;
    --color-blue: #3b82f6;
    --color-grey: #cbd5e1;

    --mobile-font-size: 12px;
}

* {
    padding: 0;
    margin: 0;
    outline: none;
    border: none;
    text-decoration: none;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
    font-size: var(--mobile-font-size);
    font-family:
        system-ui,
        -apple-system,
        "Segoe UI",
        "Roboto",
        "Ubuntu",
        "Cantarell",
        "Noto Sans",
        sans-serif,
        "Apple Color Emoji",
        "Segoe UI Emoji",
        "Segoe UI Symbol",
        "Noto Color Emoji";
}

code,
kbd,
samp,
pre {
    font-family:
        ui-monospace,
        "Menlo",
        "Consolas",
        "Roboto Mono",
        "Ubuntu Monospace",
        "Noto Mono",
        "Oxygen Mono",
        "Liberation Mono",
        monospace,
        "Apple Color Emoji",
        "Segoe UI Emoji",
        "Segoe UI Symbol",
        "Noto Color Emoji";
}

body {
    background: var(--background-dark-blue);
    color: var(--color-grey);
}

header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    padding: 2rem 3rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: rgba(255, 255, 255, 0);
    backdrop-filter: blur(12.4px);
    -webkit-backdrop-fiter: blur(12.4px);
    z-index: 10;
}

section {
    width: 100%;
    text-align: center;
}

.header-icon {
    font-size: 2rem;
    color: #fff;
}

.small-logo {
    background: var(--background-dark);
    color: #fff;
    width: 3rem;
    height: 3rem;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--background-dark);
    color: var(--color-blue);
    border-radius: 50%;
    font-size: 1.6rem;
    line-height: 3rem;
}

.menu-icon {
    font-size: 3rem;
    cursor: pointer;
    background: var(--background-lilla);
    -webkit-background-clip: text;
    background-clip: none;
    -webkit-text-fill-color: transparent;
}

.menu-container {
    position: fixed;
    top: -110%;
    left: 0;
    width: 100%;
    height: 100vh;
    background: rgba(255, 255, 255, 0);
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(12.4px);
    -webkit-backdrop-fiter: blur(12.4px);
    transition: all ease .6s;
    z-index: 20;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}

.menu-icon-container {
    margin-top: 2rem;
    text-align: center;
}

.menu-items-container {
    margin-top: 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
}

.menu-items-container a {
    color: #fff;
    font-size: 1.5rem;
    font-weight: 500;
}

.section-intro {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

.profile-pic-container {
    position: relative;
    width: 7rem;
    height: 7rem;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.profile-pic {
    background-image: url('../icons/me.jpg');
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    width: 6rem;
    height: 6rem;
    border-radius: 50%;
}


.rotating-out {
    position: absolute;
    width: 25rem;
    height: 25rem;
    border-radius: 50%;
}


.rotating-middle {
    position: absolute;
    width: 19rem;
    height: 19rem;
    margin: 0 auto 0 auto;
    border-radius: 50%;
}

.rotating-in {
    position: absolute;
    width: 12rem;
    height: 12rem;
    margin: 0 auto 0 auto;
    border-radius: 50%;
    transform: rotate(25deg);
}



.bordered {
    background: linear-gradient(var(--background-dark-blue), var(--background-dark-blue)) padding-box,
        var(--background-lilla) border-box;
    border-radius: 50em;
    border: 2px solid transparent;
}

.rotating-text {
    position: absolute;
    width: 2.8rem;
    height: 2.8rem;
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: 600;
    background-color: var(--background-dark-blue);
    border-radius: 50%;
}

.rotating-icon {
    position: absolute;
    width: 2.8rem;
    height: 2.8rem;
    padding: .4rem;
    background-color: var(--background-dark-blue);
}

.fast-rotation {
    animation: rotate 20s linear infinite;
}

.fast-rotation-reverse {
    animation: reversed-rotate 20s linear infinite;
}

.middle-rotation {
    animation: rotate 30s linear infinite;
}

.middle-rotation-reverse {
    animation: reversed-rotate 30s linear infinite;
}


.slow-rotation {
    animation: rotate 40s linear infinite;
}

.slow-rotation-reverse {
    animation: reversed-rotate 40s linear infinite;
}

.top-left {
    top: .4rem;
    left: .4rem;
}

.top-left-plus {
    top: 1.4rem;
    left: 1.4rem;
}

.top-left-out {
    top: 2.2rem;
    left: 2.2rem;
}

.top-right {
    top: .4rem;
    right: .4rem;
}

.top-right-plus {
    top: 1.4rem;
    right: 1.4rem;
}

.top-right-out {
    top: 2.2rem;
    right: 2.2rem;
}

.bottom-right {
    bottom: .4rem;
    right: .4rem;
}

.bottom-right-plus {
    bottom: 1.4rem;
    right: 1.4rem;
}


.bottom-right-out {
    bottom: 2.2rem;
    right: 2.2rem;
}


.bottom-left {
    bottom: .4rem;
    left: .4rem;
}

.bottom-left-plus {
    bottom: 1rem;
    left: 1rem;
}

.bottom-left-out {
    bottom: 2.2rem;
    left: 2.2rem;
}


@keyframes rotate {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

@keyframes reversed-rotate {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(-360deg);
    }
}

.section-intro-buttons-container {
    position: absolute;
    width: 90%;
    bottom: 5rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;
}

.section-intro-buttons-container a {
    width: 45%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: .5rem;
    padding: 1rem 0;
    font-size: 1.2rem;
    font-weight: 500;
    color: #fff;
    border-radius: 2rem;
    background: var(--background-lilla);
}

.btn-icon {
    font-size: 1.5rem;
}

